--- a/addPlayer.html
+++ b/addPlayer.html
@@ -22,7 +22,7 @@
 		<link rel="stylesheet" type="text/css" href="main.css" />
 		
 		<!-- Call our JavaScript File -->
-		<script src="main.js" type="text/javascript"></script>
+		
 	</head>
 	<!--Begin Body-->
 	<body id="addPlayer-page">
@@ -33,12 +33,12 @@
 			</div>
 		</header>
 		<!--Begin Form, fieldset, and legend-->
-		<form action="#" method="post">
-			<fieldset> <!--Creates box around containing material-->
+		<form action="#" method="post" id="addPlayerForm">
+			<fieldset id="addPlayerFieldset"> <!--Creates box around containing material-->
 				<legend>Player Info</legend>
-				<ul>
+				<ul id="playerInfo">
 					<!--Select Position w/ dropdown option box-->
-					<li>
+					<li id="select">
 						<label for="position">Select Position:</label>
 							<!--<select id="position">
 								<option value="quarterback">QB</option>
@@ -51,18 +51,18 @@
 					</li>
 					<!--Name Field w/ text input-->
 					<li>
-						<label for="pname">Name:</label>
+						<label for="pname">Player Name:</label>
 						<input type="text" id="pname" />
 					</li>
 					<!--Player Skill w/ range slider-->
 					<li>
 						<label for="byeweek">Bye Week:</label>
-						<input type="date" name="byeweek" />
+						<input type="date" id="byeweek" />
 					</li>
 					<!--Starter? w/ checkbox-->
 					<li>
 						<label for="starter">Starter:</label>
-						<input type="checkbox" id="starter" value="Starter" />
+						<input type="checkbox" id="starter" value="Yes" class="checkbox" />
 					</li>
 					<!--Bye Week w/ date box-->
 					<li>
@@ -82,6 +82,9 @@
 		<footer id="footer">
 			<a href="#" id="clear">Clear Stored Data</a>
 			<a href="#" id="display">Display Data</a>
+			<a href="addPlayer.html" id="addNew" style="display:none;">Add New Item</a>
+			</style>
 		</footer>
+		<script src="main.js" type="text/javascript"></script>
 	</body>
 </html>
