Update File Names and Add Comments to Files
Heavily commented files and changed names for a few files.. Also,
updated .html files to link with new file names

--- a/addPlayer.html
+++ b/addPlayer.html
@@ -18,10 +18,8 @@
 		
 		<!-- Document Title -->
 		<title> Assignment 1</title>
-		
-		<link rel="stylesheet" type="text/css" href="main.css" />
-		
-		<!-- Call our JavaScript File -->
+		<!--Link CSS File-->
+		<link rel="stylesheet" type="text/css" href="styles.css" />
 		
 	</head>
 	<!--Begin Body-->
@@ -29,7 +27,7 @@
 		<!--Header Section-->
 		<header>
 			<div>
-				<h1 id="pageName">Add A Player</h1>
+				<h1 id="pageHeader">Add A Player</h1>
 			</div>
 		</header>
 		<!--Begin Form, fieldset, and legend-->
@@ -83,8 +81,8 @@
 			<a href="#" id="clear">Clear Stored Data</a>
 			<a href="#" id="display">Display Data</a>
 			<a href="addPlayer.html" id="addNew" style="display:none;">Add New Item</a>
-			</style>
 		</footer>
+		<!--Call Javascript file-->
 		<script src="main.js" type="text/javascript"></script>
 	</body>
 </html>
