--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 		<!-- Document Title -->
 		<title> Assignment 1</title>
 		
-		<!-- Call our JavaScript File -->
-		<link rel="stylesheet" type="text/css" href="main.css" />
+		<!-- Link CSS File -->
+		<link rel="stylesheet" type="text/css" href="styles.css" />
 		
 	</head>
 	<!--Begin Body of html page-->
@@ -36,9 +36,8 @@
 				players that you would like to have on your roster on gameday!</p>
 		</section>
 		<!--Button for starting application-->
-		<!--<nav>-->
 		<a href="addPlayer.html" id="addPlayerBtn"><img src="images/addPlayerUp.jpg" alt="" /></a>
-		<!--</nav>-->
+		<!--Call Javascript File-->
 		<script src="main.js" type="text/javascript"></script>
 	</body>
 </html>
